--- a/index.html
+++ b/index.html
@@ -77,5 +77,27 @@
 
     <p class="border-prop">WE CAN SEE BORDER PROPERTY </p>
 
+    <p class="padding-margin">Here, We Can Test Margin and Padding</p>
+<!-- 
+    <button class="button">
+        SUBMIT
+    </button> -->
+
+    <h1>&copy;</h1>
+
+    <form class="form">
+
+        <label class="label">Enter Name</label>
+    <br>
+        <input  type="name" name="name" class="name" id="fname" placeholder="Enter Your Name" ></input>
+
+    </br>
+        <label class="label">Enter Name</label>
+    <br>
+        <input type="name" name="name" class="name" id="fname" placeholder="Enter Your Name" ></input>
+    <br>
+        <input type="submit">
+    </form>
+
 </body>
 </html>
