--- a/index.html
+++ b/index.html
@@ -85,19 +85,35 @@
 
     <h1>&copy;</h1>
 
-    <form class="form">
+   <form class="contact-form">
+        
+        <label class="form-label">NAME</label>
+        <br>
+        <input type="name" class="user-details" name="name" id="fname" placeholder="ENTER YOUR NAME" required></input>
+        <br>
+        <label class="form-label">LAST NAME</label>
+        <br>
+        <input type="name" class="user-details" name="lastname" id="flastname" placeholder="ENTER YOUR LAST NAME" required></input>
+        <br>
+        <label class="form-label">PHONE NUMBER</label>
+        <br>
+        <input type="number" class="user-details" name="number" id="fnumber" placeholder="ENTER YOUR PHONE NUMBER" required></input>
+        <br>
+        <label class="form-label">EMAIL</label>
+        <br>
+        <input type="name" class="user-details" name="email" id="femail" placeholder="ENTER YOUR EMAIL" required></input>
+        <br>
+        <label class="form-label">CITY</label>
+        <br>
+        <input type="name" class="user-details" name="city" id="fcity" placeholder="CITY" required></input>
+        <br>
+        <label class="form-label">MESSAGE</label>
+        <br>
+        <input type="name" class="user-details" name="message" id="fmessage" placeholder="MESSAGE" required></input> 
+        <br>
+        <input type="submit" class="sub-button"></input>
 
-        <label class="label">Enter Name</label>
-    <br>
-        <input  type="name" name="name" class="name" id="fname" placeholder="Enter Your Name" ></input>
 
-    </br>
-        <label class="label">Enter Name</label>
-    <br>
-        <input type="name" name="name" class="name" id="fname" placeholder="Enter Your Name" ></input>
-    <br>
-        <input type="submit">
-    </form>
-
+   </form>
 </body>
 </html>
