update with grid

--- a/index.html
+++ b/index.html
@@ -112,8 +112,47 @@
         <input type="name" class="user-details" name="message" id="fmessage" placeholder="MESSAGE" required></input> 
         <br>
         <input type="submit" class="sub-button"></input>
-
-
    </form>
+
+   <div class="apply-position">
+    <div class="apply-position">
+        <img src="images/black_glow.png" alt="img" class="banner-img">
+        
+    </div>
+   </div>
+
+   <div class="grid-container">
+        <div class="grid-item">1</div>
+        <div class="grid-item">2</div>
+        <div class="grid-item">3</div>
+        <div class="grid-item">4</div>
+        <div class="grid-item">5</div>
+        <div class="grid-item">6</div>
+   </div>
+
+   <section class="container">
+    <div class="para">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad minima beatae impedit tempora possimus optio sed deleniti a saepe quisquam, modi repellat architecto asperiores tenetur atque officiis molestiae distinctio? Placeat?</p>
+    </div>
+    <div class="para">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, nemo quae ratione assumenda temporibus tenetur quam voluptates modi similique. Vitae quod sint pariaturis.
+        </p>
+    </div>
+</section>
+
+
+<section class="data">
+    <div class="title">MARKET</div>
+    <div class="coin"> </div>
+    <div class="coin"><a href="https://web.whatsapp.com/">ANC </a></div>
+    <div class="coin">120</div>
+    <div class="coin">BTC</div>
+    <div class="coin">130</div>
+    <div class="coin">XEP</div>
+    <div class="coin">140</div>
+    <div class="coin">DCR</div>
+    <div class="coin">150</div>   
+</section>
+
 </body>
 </html>
