upadate with flex

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <p class="border-prop">WE CAN SEE BORDER PROPERTY </p>
 
-    <p class="padding-margin">Here, We Can Test Margin and Padding</p>
+    <p class="padding-margin">Here, We Can Test Margin and P1adding</p>
     <!-- 
     <button class="button">
         SUBMIT
@@ -121,7 +121,7 @@
     </form>
 
     <!-- <section class="apply-pos">
-        <img src="images/black_glow.png" class="image" alt="image">
+        <img src="images/black_glow.png" class="im" alt="image">
     </section> -->
 
 
@@ -131,8 +131,24 @@
         <div class="container">products</div>
         <div class="container">journal</div>
         <div class="container">contacts</div>
-
     </section>
+
+    <div class="flex-container">
+        <div class="flex-item">1</div>
+
+        <div class="flex-item">2</div>
+
+        <div class="flex-item">3</div>
+
+        <div class="flex-item">4</div>
+
+        <div class="flex-item">5</div>
+
+        <div class="flex-item">6</div>
+
+    </div>
+
+
 
 </body>
 
