update with flex, psu prop media prop css completed

--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
         <div class="container">contacts</div>
     </section>
 
+
+    <p class="psu-test">
+        testing psu prop
+    </p>
+
+
     <div class="flex-container">
         <div class="flex-item">1</div>
 
@@ -147,6 +153,10 @@
         <div class="flex-item">6</div>
 
     </div>
+
+    <p class="media-test">
+        testing media
+    </p>
 
 
 
